--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,11 @@
         <include layout = "@layout/toolbar_main"
             android:id = "@+id/toolbar"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/noodleRecycler"
+        <FrameLayout
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
+            android:layout_height="match_parent"
+            />
     </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
